# AI-Incident-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/ai/agents/: classification_agent.py  code_reviewer.py  knowledge_agent.py  priority_agent.py  reviewer_agent.py
app/ai/mcp/: mcp_client.py
app/ai/nodes/: approval_node.py  approval_router.py
app/ai/prompts/: classification_prompt.py  knowledge_prompt.py  priority_prompt.py  reviewer_propmpt.py
app/ai/providers/: checkpointer_provider.py  embedding_provider.py  llm_provider.py  vector_store_provider.py
app/ai/rag/: ingest.py  loader.py  retriever.py  splitter.py
app/ai/schemas/: classification.py  incident.py  knowledge.py  prirority.py  reviewer.py
app/ai/tools/: incident_history_tool.py  jira_ticket_tool.py  knowledge_search_tool.py  qdrant_search_tool.py
app/ai/workflows/: incident_analysis.py  state.py
app/config/: settings.py
app/core/: langsmith.py  logging.py  startup.py
app/database/: base.py  session.py
app/domain/: enums.py
app/models/: __init__.py  base.py  request.py
app/repositories/: request_repository.py
app/schemas/: request.py  resume.py
app/services/: ingestion_service.py  jira_provider.py  request_service.py
data/chroma/: chroma.sqlite3
data/seed/: requests.json
docs/: SPRINTS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: create_tables.py  seed_requests.py
(+34 files in other folders)
