[project]
name = "enterprise-ai-platform-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
