[project]
name = "enterprise-ai-platform-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=0.3.10",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "mcp>=0.1.0",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
